<resources>
    <string name="app_name">Greenhouse</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="titleList">Green Houses</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="details.greenhouse">Invernadero</string>
    <string name="details.logs">Registros</string>
    <string name="details.temperature">Temperatura:</string>
    <string name="details.humidity">Humedad:</string>
    <string name="api.url">http://localhost:5000/api</string>
</resources>